--- a/style.css
+++ b/style.css
@@ -71,3 +71,40 @@
  #new-task-submit:active{
     opacity: 0.7;
  }
+ main{
+    flex: 1 1 0%;
+    max-width: 800px ;
+    width: 100%;
+    margin: 0 auto;
+    padding: 2rem 1rem;
+ }
+
+ .task-list{
+    padding: 1rem;
+ }
+ .task-list h2{
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--gray);
+    margin-bottom: 1rem;
+ }
+
+#tasks .task{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: var(--darkest);
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    transition: 0.5s;
+ }
+ #tasks .task .content .text{
+    flex: 1 1 0%;
+    color: var(--light);
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: block;
+    transition: 0.5s;
+ }
+ 
