--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
     font-size: 1.2rem;
     font-weight: 600;
     cursor: pointer;
-    background-image: linear-gradient(to right, var(--pink), var(--purple)
+    background-image: linear-gradient(to right, var(--pink),
     var(--purple));
     --webkit-background-clip: text;
     --webkit-text-fill-color: transparent;
@@ -107,4 +107,35 @@
     display: block;
     transition: 0.5s;
  }
- 
+ #tasks .task .content .text:not(:read-only){
+    text-decoration: line-through;
+    color: var(--pink);
+ }
+ #tasks .task .actions{
+    display: flex;
+    margin: 0 -0.5rem;
+ }
+ #tasks .actions button{
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1.125rem;
+    text-transform:  0.4s;
+    transition: 0.4s;
+ }
+ .task .actions button:hover{
+    opacity: 0.8;
+ }
+ .task .actions button:active{
+    opacity: 0.7;
+ }
+.task .actions .edit{
+    background-image: linear-gradient(to right, var(--pink),
+    var(--purple));
+    --webkit-background-clip: text;
+    --webkit-text-fill-color: transparent;
+
+}
+
+.task .actions .delete{
+    color: red;
+}
