--- a/style.css
+++ b/style.css
@@ -99,6 +99,10 @@
     margin-bottom: 1rem;
     transition: 0.5s;
  }
+ #tasks .task .content{
+    flex: 1 1 0%;
+ }
+
  #tasks .task .content .text{
     flex: 1 1 0%;
     color: var(--light);
